# Elastos.RT.SDK.Wallet.Android

./: .gitignore  README.md  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle  maven-release-aar.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/config/: CoinConfig.json
app/src/main/cpp/: ElaDid.cpp  ElaDidManager.cpp  ElaIdChainSubWallet.cpp  ElaIdManagerFactory.cpp  ElaMainchainSubWallet.cpp  ElaMasterWallet.cpp  ElaMasterWalletManager.cpp  ElaSidechainSubWallet.cpp  ElaSubWallet.cpp  ElaUtils.cpp  ElaUtils.h  ElasotsWalletDemo.cpp
app/src/main/cpp/elastos/include/: Elastos.CoreLibrary.Core.h  Elastos.CoreLibrary.Utility.h  Elastos.CoreLibrary.h  Elastos.DID.h  Elastos.DIDInspector.h  Elastos.Wallet.h  ElastosCore.h  carapi.h  clsbase.h  clsdef.h  eladef.h  elaerror.h  elalloc.h  elaobj.h  elapi.h  elasysapi.h  elatypes.h  elautoptr.h  eldelegate.h  elspinlock.h
app/src/main/cpp/elastos/include/elastos/: coredef.h
app/src/main/cpp/elastos/include/openssl/: opensslconf.h
app/src/main/java/com/elastos/spvcore/: DIDManagerSupervisor.java  ElastosWalletUtils.java  IDid.java  IDidManager.java  IIdChainSubWallet.java  IIdManagerCallback.java  IMainchainSubWallet.java  IMasterWallet.java  ISidechainSubWallet.java  ISubWallet.java  ISubWalletCallback.java  MasterWalletManager.java  (+1 more)
app/src/main/jni/: ElaDIDManagerSupervisor.cpp  ElaDid.cpp  ElaDidManager.cpp  ElaIdChainSubWallet.cpp  ElaMainchainSubWallet.cpp  ElaMasterWallet.cpp  ElaMasterWalletManager.cpp  ElaSidechainSubWallet.cpp  ElaSubWallet.cpp  ElaUtils.cpp  ElaUtils.h
(+95 files in other folders)
